# ired_simulation

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: gazebo.launch  ired_gazebo.launch  move_base.launch  navigation.launch  savemap.launch  slam.launch  teleop.launch
maps/: map.pgm  map.yaml
meshes/: Body.stl  Wheel.stl
param/: costmap_common_params.yaml
scripts/: teleop.py
urdf/: ired_robot.gazebo.xacro  ired_robot.urdf.xacro
