<?xml version="1.0"?>
<package format="2">
  <name>ired_simulation</name>
  <version>0.0.0</version>
  <description>The ired_simulation package</description>
  <maintainer email="thitipongth@todo.todo">thitipongth</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
</package>
